# EE

./: .gitignore  OVERNIGHT_SETUP.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  README.md  SETUP_COMPLETE.md  STATUS.md  generate_test_app.py  test_intelligent_matching.py
.claude/: CLAUDE.md  settings.json
Assessment/: Brand_Manager-capabilities.md  C3-capabilities.md  CATALOG.md  CMC-capabilities.md  EE-capabilities.md  FS-capabilities.md  MM-capabilities.md  MacR-PyQt-capabilities.md  MacR-capabilities.md  NG-capabilities.md  PHASE1_PROMPT.md  PIW-capabilities.md  PLANNING.md  PQTI-capabilities.md  README.md
CCM_V3/: README.md  ccm_v3.py  mcp_access_proxy.py  mcp_real_server.py  mcp_server.py  run_ccm.sh  tcc_setup.py  test_c3_install.py
docs/: ARCHITECTURE_ANALYSIS.md  EE_STARTUP_GUIDE.md  LIBRARY_EXTRACTION_COMPLETE.md  LIBRARY_SYSTEM_REPORT.md  MM_MESH_INTEGRATION.md  PARENT_CC_IMPLEMENTATION.md  PARENT_CC_PROTOCOL.md  SW2_APP_BUILDER_ANALYSIS.md  SW2_IMPLEMENTATION_COMPLETE.md  SW2_ISSUES_SUMMARY.md  SW2_VISUAL_COMPARISON.md  TOKEN_MANAGEMENT.md  VERSION_CONTROL_CHECKLIST.md  VERSION_CONTROL_STANDARDS.md
plans/: BACKLOG.md  CURRENT_CYCLE.md  CYCLE_2_PLAN.md  Comms.md  IMMEDIATE_NEXT.md  ISSUES.md  LIBRARY_EXTRACTION_PLAN.md  LIBRARY_FACTORY_PLAN.md  NEXT_STEPS.md  NextSteps.md  Plan3.md  Plan3_v2.md
shared/: mm_client_retry.py
shared/sw_core/: README.md  __init__.py  base_application.py  mesh_integration.py  parent_cc_protocol.py  pyproject.toml  settings_manager.py  terminal_manager.py
shared/sw_core/version_info/: INTEGRATION.md  __init__.py
shared/sw_pcc/: README.md  __init__.py  create_app.py  launcher.py  pyproject.toml  registry.py
status/: COMPLETED.md  DEBUG_FIXES.md  EEM_FIXES_COMPLETE.md  EE_CYCLE_STATUS.json  GUI_MODIFICATIONS_NEEDED.md  HANDOFF.md  HANDOFF_SIGNAL.txt  LIBRARY_EXTRACTION_CYCLE_1.md  LIBRARY_EXTRACTION_STATUS.md  MM_STATS_COMPLETE.md  MM_STATS_IMPLEMENTATION.md  SESSION_2026-02-06_COMPLETED.md  SESSION_NOTES.md  STATUS_REPORT_TEMPLATE.md  ee_config.json  ee_cycle_1_status.json
templates/: HANDOFF_PROMPT_TEMPLATE.md
tools/: ee_http_server.py  ee_instance_server.py  ee_manager.py  ee_mesh_client.py  ee_monitor_gui.py  ee_monitor_gui_OLD.py  ee_monitor_gui_OLD2.py  ee_monitor_test.py  ee_monitor_test_gui.py  ee_start_server.py  (+12 more)
(+49 files in other folders)
