[project]
name = "sw-core"
version = "1.0.0"
description = "Silver Wizard Core Libraries - Shared infrastructure components"
authors = [
    {name = "Silver Wizard Software"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    # Core dependencies (always required)
]

[project.optional-dependencies]
# PyQt6 support (for SettingsManager)
pyqt = [
    "PyQt6>=6.7.0"
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
