[project]
name = "sw-pcc"
version = "1.0.0"
description = "Silver Wizard Parent CC Control - PCC management tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sw-core>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
sw-registry = "registry:main"
sw-create-app = "create_app:main"
sw-launcher = "launcher:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
